Image Not Positioned Correctly. Fixing.
Removing the constraint for position and changing the constraint for
size to cover (hopefully meaning to cover the whole container.

--- a/main.css
+++ b/main.css
@@ -16,8 +16,7 @@ p {
 .container {
 	display: flex;
 	background-image: url(https://i.imgur.com/VU4Bvo4.jpg);
-	background-position: center;
-	background-size: auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 }
 
